# norsk-ai-detektor

./: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
.github/workflows/: deploy.yml
src/: main.rs
